// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Illustration /> Scene BrandMomentCaptureIntro should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-capture-intro.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentError should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-error-page.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentLogin should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-login.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentPositiveOutro should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-positive-outro.png"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesAction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/empty-states-action.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesInformative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/empty-states-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesNegative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/empty-states-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesNeutral should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/empty-states-neutral.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesPositive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/empty-states-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Information360Upgrade should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-360-upgrade.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationDemographicFocus should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-demographic-focus.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationEmergingTrends should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-emerging-trends.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationEmployeeLifecycle should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-employee-lifecycle.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationReportOwner should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-report-owner.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationReportOwnerByRule should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-report-owner-by-rule.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationTurnoverCalculator should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-turnover-calculator.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationTurnoverForecast should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/information-modals-turnover-forecast.svg"
  />
</div>
`;

exports[`<Illustration /> Scene IntroductionsCaptureIntro should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/introductions-capture-intro.svg"
  />
</div>
`;

exports[`<Illustration /> Scene IntroductionsNewAccount should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/introductions-new-account.svg"
  />
</div>
`;

exports[`<Illustration /> Scene IntroductionsNewAdmin should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/introductions-new-admin.svg"
  />
</div>
`;

exports[`<Illustration /> Scene IntroductionsPerformance should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/introductions-performance.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteBrand should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-brand.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteBrandAlt should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-brand-alt.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteLanguage should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-language.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteLanguageAlt should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-language-alt.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSitePrinciples should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-principles.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSitePrinciplesAlt should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-principles-alt.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteProduct should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-product.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteProductAlt should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-product-alt.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteResources should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-resources.svg"
  />
</div>
`;

exports[`<Illustration /> Scene KaizenSiteResourcesAlt should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/kaizen-site-resources-alt.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLabFourWeekCycle should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-lab-4-week-cycle.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLabScheduling should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-lab-scheduling.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningCoaching should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningFeedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningManagerHub should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-manager-hub.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningOneOnOneMeetings should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-1-on-1.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningProductivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningRemoteManager should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningResilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ManagerLearningStrategy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/manager-learning-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceCalibration should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-calibration.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceCompanySettings should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-company-settings.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceEvaluations should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-evaluations.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceFaq should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-faq.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceGoalStats should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-goal-stats.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceGoals should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-goals.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformancePeopleNetwork should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-people-network.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformancePerformanceFeedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceSelfReflections should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-self-reflections.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceSupport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-support.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceTeamSummary should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/performance-team-summary.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Programs should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/programs.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SurveyGetStarted should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/getting-started.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SurveyOverviewClosed should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/scene/survey-overview-closed.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AccountBasics should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-account-basics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Action should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AddImage should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-add-image.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AddUser should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-add-user.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Alarm should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-alarm.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Assertive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-assertive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BaselineSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-baseline-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BenefitsSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-benefits-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BlankSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CandidateSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-candidate-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Cautionary should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-cautionary.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ChangeReadiness should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-change-readiness.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ChangeSuccess should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-change-success.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Coaching should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CompanyDetails should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-company-details.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-custom-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-custom-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomUnattributedSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-custom-unattributed-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EmergencyResponse should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EmployeeData should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-employee-data.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EngagementSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ExecutiveReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-executive-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ExitSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-exit-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot FastAction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-fast-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Feedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Fire should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fire.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Fireworks should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fireworks.svg"
  />
</div>
`;

exports[`<Illustration /> Spot FullImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-full-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Gdpr should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-gdpr.svg"
  />
</div>
`;

exports[`<Illustration /> Spot GeneralOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot HrisImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-hris-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot InclusionSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-inclusion-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Individual180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Individual360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-individual-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Informative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot InternSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-intern-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LeaderReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-leader-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Leadership180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Leadership360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-leadership-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LeadingThroughCrisis should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Manager180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Manager360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-manager-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ManagerLearning should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-manager-learning.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ManagerReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-manager-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot MeetingVoices should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-meeting-voices.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Negative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot OneOnOne should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-1-on-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PartialImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-partial-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PerformanceDiagnostics should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-diagnostics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PhasedWeek1OnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-phased-week-1-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PhasedWeek5OnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-phased-week-5-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Positive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-positive-female.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PositiveFemale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-positive-female.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PositiveMale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/moods-positive-male.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Productivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PulseSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot QuickEngagementSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-quick-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReadArticle should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-read-article.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Recommendation should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-shield.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteManager should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteWorkQSet should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Resilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Response should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReturnToWorkplace should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ShareReport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-share-report.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SinglePointOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-single-point-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SpreadsheetTemplate should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-spreadsheet-template.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Starburst should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-starburst.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Stop should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-stop.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Strategy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/manager-learning-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TakeAim should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-take-aim.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Team should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-team.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TeamEffectiveness1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-team-effectiveness-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TeamEffectiveness2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-team-effectiveness-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Timezone should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/new-account-timezone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TrafficCone should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-traffic-cone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-training-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-training-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training3 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-training-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Trophy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-trophy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot UnderConstruction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-under-construction.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValueAdd should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-value-add.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValuesSurvey1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-values-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValuesSurvey2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-values-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Video should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-video.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ViewReports should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-view-reports.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-wellbeing-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-wellbeing-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey3 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/template-library-wellbeing-survey-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Workshop should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class=" wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/spot/miscellaneous-workshop.svg"
  />
</div>
`;
